# dedup

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.test  README.md  SSH_JSON_STREAMING.md  build.rs  build_and_deploy.sh  install.sh  mock_dedups.sh  mock_ssh.sh  run_test_container.sh  sample_media.sh  setup_test_ssh.sh  ssh_examples.md  ssh_remote_test.sh  test_config.toml  test_dedups_remote.sh  test_protocol.sh  test_protocol_perf.sh  test_setup.sh  test_ssh_tunnel.sh
.github/workflows/: publish.yml  release.yml  tests.yml
proto/: dedups.proto
scripts/: local_api_test.sh  ssh_api_example.sh
src/: app_mode.rs  audio_fingerprint.rs  client.rs  commands.rs  config.rs  file_cache.rs  file_utils.rs  file_utils.rs.bak  file_utils.rs.original  lib.rs  main.rs  media_dedup.rs  options.rs  protocol.rs  server.rs  ssh_utils.rs  video_fingerprint.rs
src/tests/: ssh_tests.rs
src/tui_app/: copy_missing.rs  mod.rs
test_env/: setup_test_env.sh  test_remote_dedups.sh
tests/: config_tests.rs  integration_tests.rs  ssh_docker_tests.rs  ssh_integration_tests.rs  ssh_json_streaming_test.rs  tunnel_api_integration.rs
tests/docker/: Dockerfile  README.md  docker-compose.yml  run_docker_tests.sh
tests/docker/scripts/: run_tests.sh  tunnel_test.sh
tests/docker/ssh_test_data/: README.txt
