[package]
name = "dedup_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "~4.5.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
walkdir = "~2.5.0"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
blake3 = "1.5"
twox-hash = "1.6"  # For xxHash implementation
gxhash = "3.0"     # For gxHash implementation
rayon = "~1.10.0"
ratatui = { version = "~0.26.0", features = ["crossterm"] }
crossterm = "0.27"
thiserror = "1.0"
log = "0.4"
simplelog = "~0.12.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "~1.5.0"
indicatif = "~0.17.7"
humansize = "~2.1.3"
strip-ansi-escapes = "~0.2.0"
crossbeam-channel = "~0.5.12"
num_cpus = "1.16"
tui-input = "~0.8.0"
glob = "~0.3.1"
env_logger = "0.10"
simple_logger = "4.2"
regex = "1.10"
dirs = "5.0"

[dev-dependencies]
assert_cmd = "~2.0.14"
predicates = "~3.1.0"
tempfile = "3.5"
rand = "0.8.5"
filetime = "0.2.23"
